--- a/client_server_src/client/src/App.css
+++ b/client_server_src/client/src/App.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 40px;
 }
 
 :root {
@@ -13,11 +14,55 @@
   --msg-odd-bg-color: rgb(230, 230, 230);
 }
 
-h1 {
+/* h1 {
   font-family: "Overpass";
   text-shadow: 2px 2px black;
   font-size: 50px;
+} */
+.avatarImg {
+  border: 5px black;
 }
+
+.fileUpload {
+  opacity: 0;
+  width: 100px;
+  height:100px;
+  margin-bottom: -100px;
+}
+
+.profileBlob {
+ border-radius: 5px;  
+ border: 2px solid rgb(123, 123, 123);
+  border-radius: 5px;
+  transition: opacity 0.2s;
+}
+
+.fileUpload:hover {
+  cursor: pointer;
+}
+
+.placeholderImg {
+  background-color: #282c34;
+  width: 100px;
+  height: 100px;
+  border-radius: 5px; 
+  transition: background-color 0.15s;
+}
+
+.profileBlob:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+
+.fileUpload:hover ~ .placeholderImg {
+  background: #c9c9c9;
+}
+
+.fileUpload:hover ~ .profileBlob {
+  opacity: 0.5;
+}
+
 
 .TitleSign {
   display: flex;
@@ -50,12 +95,15 @@ h1 {
 .CanvasChat {
   display: flex;
   gap: 10px;
-  margin-top: -50px;
+  margin-left: 20px;
+  margin-right: 20px;
+  /* margin-top: -50px; */
 }
+
 
 .chatbox {
   width: 400px;
-  height: 790px;
+  height: 800px;
   background-color: rgb(230, 230, 230);
   border-radius: 5px;
   color: black;
