--- a/client_server_src/client/src/index.css
+++ b/client_server_src/client/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -5,7 +9,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: rgb(35, 35, 35); */
-  background-color: rgba(43, 131, 232, 0.558);
+  background-color: rgb(70, 144, 228);
   display: flex;
   justify-content: center;
   overflow-x: hidden;
